# kastrup

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: release.yml
src/: config.rs  database.rs  log.rs  main.rs  message.rs  organizer.rs  poller.rs  source.rs
src/sources/: instagram.rs  maildir.rs  messenger.rs  mod.rs  rss.rs  weechat.rs
