[package]
name = "kastrup"
version = "0.1.53"
edition = "2021"
authors = ["Geir Isene <g@isene.com>"]
description = "Unified messaging hub TUI. Feature clone of Heathrow, built on crust."
license = "Unlicense"
repository = "https://github.com/isene/kastrup"

[dependencies]
crust = { version = "0.1", path = "../crust", package = "fe2o3-crust" }
glow = { version = "0.1", path = "../glow", package = "fe2o3-glow" }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
ureq = { version = "2", features = ["tls"] }
regex = "1"
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
